backend-authentication updated

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGODB_CONNECTION = mongodb+srv://bqc1990:Aa123456@cluster0.2nwvy.gcp.mongodb.net/Afanti?retryWrites=true&w=majority
+JWT_SECRET = Dongying
